--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
     "file-loader": "^1.1.9",
+    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
     "xml-loader": "^1.2.1"
