--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "server": "node server.js",
     "build": "webpack"
   },
   "keywords": [],
@@ -14,10 +17,13 @@
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
+    "express": "^4.16.2",
     "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-dev-server": "^2.11.1",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
